force-app/main/default/objects/Opportunity/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <formula>Account.Account__r.Name</formula>
    <label>事務所</label>
    <type>Text</type>
</CustomField>