force-app/main/default/objects/Opportunity/fields/OpportunityRepPerson__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRepPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunityRepPeople</relationshipName>
    <type>Lookup</type>
</CustomField>