force-app/main/default/objects/Opportunity/fields/OppSfdcId__c.field-meta.xml
<CustomField>
    <fullName>OppSfdcId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談SFDC_ID</label>
    <type>Text</type>
</CustomField>