force-app/main/default/objects/Opportunity/fields/OrderApproved__c.field-meta.xml
<CustomField>
    <fullName>OrderApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>受注承認済み</label>
    <type>Checkbox</type>
</CustomField>