force-app/main/default/objects/Opportunity/fields/OrgA_LastSyncDate__c.field-meta.xml
<CustomField>
    <fullName>OrgA_LastSyncDate__c</fullName>
    <label>組織A最終同期日</label>
    <type>DateTime</type>
</CustomField>