force-app/main/default/objects/Opportunity/fields/OrgA_OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OrgA_OpportunityId__c</fullName>
    <externalId>true</externalId>
    <label>組織A商談レコードID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>