force-app/main/default/objects/Opportunity/fields/OrgA_OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OrgA_OpportunityType__c</fullName>
    <label>組織A商談種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>