force-app/main/default/objects/Opportunity/fields/OrganizationA_OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationA_OpportunityId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>組織Aからのデータ移管時に使用。組織Aの商談レコードIDを持つ。</description>
    <externalId>true</externalId>
    <label>【外部ID】組織A商談ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>