force-app/main/default/objects/Opportunity/fields/OrganizationA_UpdateTargetFlag__c.field-meta.xml
<CustomField>
    <fullName>OrganizationA_UpdateTargetFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【後で消す】組織A更新対象フラグ</label>
    <type>Checkbox</type>
</CustomField>