force-app/main/default/objects/Opportunity/fields/OutOfPriceAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>OutOfPriceAfterUpdate__c</fullName>
    <formula>if(  UpdateAfterPriceOutsideCount__c &gt; 0,true,false
)

/*20231026 修正*/
/*if(
ISPICKVAL(PriceAfterUpdated__c,&quot;6300&quot;),false,if(ISPICKVAL(PriceAfterUpdated__c,&quot;30000&quot;),false,true
))*/</formula>
    <label>更新後金額定価外</label>
    <type>Checkbox</type>
</CustomField>