force-app/main/default/objects/Opportunity/fields/PaymentSiteException__c.field-meta.xml
<CustomField>
    <fullName>PaymentSiteException__c</fullName>
    <formula>NOT(ISPICKVAL( NegotiationPaymentSite__c,&quot;翌月末払い&quot;))</formula>
    <label>支払いサイト例外</label>
    <type>Checkbox</type>
</CustomField>