force-app/main/default/objects/Opportunity/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>期間</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>