force-app/main/default/objects/Opportunity/fields/PhaseDetail__c.field-meta.xml
<CustomField>
    <fullName>PhaseDetail__c</fullName>
    <label>フェーズ詳細</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02-00_ニーズ非合意</fullName>
            </value>
            <value>
                <fullName>02-01_ニーズ合意</fullName>
            </value>
            <value>
                <fullName>02-02_サービス内容合意</fullName>
            </value>
            <value>
                <fullName>02-03_金額について合意</fullName>
            </value>
            <value>
                <fullName>02-04_時期について合意</fullName>
            </value>
            <value>
                <fullName>03-00_ニーズ非合意</fullName>
            </value>
            <value>
                <fullName>03-01_ニーズ合意</fullName>
            </value>
            <value>
                <fullName>03-02_サービス内容合意</fullName>
            </value>
            <value>
                <fullName>03-03_金額について合意</fullName>
            </value>
            <value>
                <fullName>03-04_時期について合意</fullName>
            </value>
            <value>
                <fullName>04-01_稟議時期についての会話</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>