force-app/main/default/objects/Opportunity/fields/PostingEndDate__c.field-meta.xml
<CustomField>
    <fullName>PostingEndDate__c</fullName>
    <label>掲載終了日</label>
    <summarizedField>OpportunityLineItem.ContractEndDate__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>