force-app/main/default/objects/Opportunity/fields/PostingStartDate__c.field-meta.xml
<CustomField>
    <fullName>PostingStartDate__c</fullName>
    <label>掲載開始日</label>
    <summarizedField>OpportunityLineItem.ServiceDate</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>