force-app/main/default/objects/Opportunity/fields/pregrant__c.field-meta.xml
<CustomField>
    <fullName>pregrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>事前付与</label>
    <type>Checkbox</type>
</CustomField>