force-app/main/default/objects/Opportunity/fields/ProductDiscount__c.field-meta.xml
<CustomField>
    <fullName>ProductDiscount__c</fullName>
    <formula>DiscountRateTotalNegotiation__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商品値引き</label>
    <type>Checkbox</type>
</CustomField>