force-app/main/default/objects/Opportunity/fields/ProductMaxDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>ProductMaxDiscountRate__c</fullName>
    <label>商品の最大値引率</label>
    <summarizedField>OpportunityLineItem.DiscountRate__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>