force-app/main/default/objects/Opportunity/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>特記事項文生成条件用</description>
    <label>商品種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLLライト</fullName>
            </value>
            <value>
                <fullName>BLLスタンダード</fullName>
            </value>
            <value>
                <fullName>BLLエンタープライズ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>