force-app/main/default/objects/Opportunity/fields/Reading__c.field-meta.xml
<CustomField>
    <fullName>Reading__c</fullName>
    <label>読み</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受注</fullName>
            </value>
            <value>
                <fullName>SF承認待ち：95%</fullName>
            </value>
            <value>
                <fullName>A：70%</fullName>
            </value>
            <value>
                <fullName>B：50%</fullName>
            </value>
            <value>
                <fullName>C：30%</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>ネタ</fullName>
            </value>
            <value>
                <fullName>優ネタ</fullName>
            </value>
            <value>
                <fullName>良ネタ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>