force-app/main/default/objects/Opportunity/fields/ReadingAccuracy__c.field-meta.xml
<CustomField>
    <fullName>ReadingAccuracy__c</fullName>
    <formula>IF ( TEXT(StageName)= &quot;受注&quot;, 1,
CASE( TEXT(Reading__c) , 
&quot;受注&quot;, 1, 
&quot;SF承認待ち：95%&quot;, 0.95, 
&quot;A：70%&quot;, 0.7,
&quot;B：50%&quot;,0.5,
&quot;C：30%&quot;,0.3,
0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>読み確度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>