force-app/main/default/objects/Opportunity/fields/RepresentProductsFamily__c.field-meta.xml
<CustomField>
    <fullName>RepresentProductsFamily__c</fullName>
    <label>代表商品ファミリ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>