force-app/main/default/objects/Opportunity/fields/SalesStacked__c.field-meta.xml
<CustomField>
    <fullName>SalesStacked__c</fullName>
    <label>売上の積み上げ</label>
    <summarizedField>Revenue__c.TotalAmountTaxExcluded__c</summarizedField>
    <summaryForeignKey>Revenue__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>