force-app/main/default/objects/Opportunity/fields/SigningMethodExceptCloudSign__c.field-meta.xml
<CustomField>
    <fullName>SigningMethodExceptCloudSign__c</fullName>
    <label>（クラウドサイン以外の場合）締結方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>