force-app/main/default/objects/Opportunity/fields/SlackURL__c.field-meta.xml
<CustomField>
    <fullName>SlackURL__c</fullName>
    <label>SlackURL（営業→経理）</label>
    <type>Url</type>
</CustomField>