force-app/main/default/objects/Opportunity/fields/SpecialInformation__c.field-meta.xml
<CustomField>
    <fullName>SpecialInformation__c</fullName>
    <label>特記事項文</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>