force-app/main/default/objects/Opportunity/fields/SpecialInformationNewFlag__c.field-meta.xml
<CustomField>
    <fullName>SpecialInformationNewFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>特記事項新規生成フラグ</label>
    <type>Checkbox</type>
</CustomField>