force-app/main/default/objects/Opportunity/fields/SpecificProductsNumber__c.field-meta.xml
<CustomField>
    <fullName>SpecificProductsNumber__c</fullName>
    <label>特定商品数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>