force-app/main/default/objects/Opportunity/fields/ToExpectInBLL__c.field-meta.xml
<CustomField>
    <fullName>ToExpectInBLL__c</fullName>
    <label>BLLに期待すること</label>
    <length>255</length>
    <type>Text</type>
</CustomField>