force-app/main/default/objects/Opportunity/fields/TotalAmountListPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountListPrice__c</fullName>
    <label>合計金額（定価）</label>
    <summarizedField>OpportunityLineItem.TotalAmountListPrice__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>