force-app/main/default/objects/Opportunity/fields/TrafficSourceLP__c.field-meta.xml
<CustomField>
    <fullName>TrafficSourceLP__c</fullName>
    <label>流入経路_LP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>