force-app/main/default/objects/Opportunity/fields/TrafficSourceMedia__c.field-meta.xml
<CustomField>
    <fullName>TrafficSourceMedia__c</fullName>
    <label>流入経路_媒体</label>
    <length>255</length>
    <type>Text</type>
</CustomField>