force-app/main/default/objects/Opportunity/fields/TrafficSourceMediaDetail__c.field-meta.xml
<CustomField>
    <fullName>TrafficSourceMediaDetail__c</fullName>
    <label>流入経路_媒体詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>