force-app/main/default/objects/Opportunity/fields/TrialEndTime__c.field-meta.xml
<CustomField>
    <fullName>TrialEndTime__c</fullName>
    <label>トライアル終了日時</label>
    <type>DateTime</type>
</CustomField>