force-app/main/default/objects/Opportunity/fields/TrialGrantDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>TrialGrantDateAndTime__c</fullName>
    <label>トライアル付与日時</label>
    <type>DateTime</type>
</CustomField>