force-app/main/default/objects/Opportunity/fields/TrialKahi__c.field-meta.xml
<CustomField>
    <fullName>TrialKahi__c</fullName>
    <label>トライアル可否</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>希望する</fullName>
            </value>
            <value>
                <fullName>希望しない</fullName>
            </value>
            <value>
                <fullName>未定</fullName>
            </value>
            <value>
                <fullName>付与済</fullName>
            </value>
            <value>
                <fullName>付与しない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>