force-app/main/default/objects/Opportunity/fields/TrialStartTime__c.field-meta.xml
<CustomField>
    <fullName>TrialStartTime__c</fullName>
    <label>トライアル開始日時</label>
    <type>DateTime</type>
</CustomField>