force-app/main/default/objects/Opportunity/fields/UpdateAfterPriceOutsideCount__c.field-meta.xml
<CustomField>
    <fullName>UpdateAfterPriceOutsideCount__c</fullName>
    <label>商談商品の更新後定価外件数</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.OutOfListPriceAfterUpdate__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>