force-app/main/default/objects/Opportunity/fields/UpdateContactAddressEmail__c.field-meta.xml
<CustomField>
    <fullName>UpdateContactAddressEmail__c</fullName>
    <label>更新連絡先（メールアドレス）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>