force-app/main/default/objects/Opportunity/fields/UpdateExistence__c.field-meta.xml
<CustomField>
    <fullName>UpdateExistence__c</fullName>
    <label>更新有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
                <default>true</default>
                <label>有</label>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>