force-app/main/default/objects/Opportunity/fields/UpdateMonths__c.field-meta.xml
<CustomField>
    <fullName>UpdateMonths__c</fullName>
    <label>更新月数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>