force-app/main/default/objects/Opportunity/fields/UpdateOpportunityCreatingTargetFlag__c.field-meta.xml
<CustomField>
    <fullName>UpdateOpportunityCreatingTargetFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>更新商談作成フローを起動させるのに使う項目</description>
    <label>更新商談作成対象フラグ</label>
    <type>Checkbox</type>
</CustomField>