force-app/main/default/objects/Opportunity/fields/UpdateORPlanUpOpportunity__c.field-meta.xml
<CustomField>
    <fullName>UpdateORPlanUpOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>更新またはプランアップ/ダウン先の商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>更新またはプランアップ/ダウン先の商談</relationshipLabel>
    <relationshipName>UpdateORPlanUpOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>