force-app/main/default/objects/Opportunity/fields/UpdaterName__c.field-meta.xml
<CustomField>
    <fullName>UpdaterName__c</fullName>
    <label>更新担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>