force-app/main/default/objects/Opportunity/fields/UpdateSourceOpportunity__c.field-meta.xml
<CustomField>
    <fullName>UpdateSourceOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>更新またはプランアップ/ダウン先の商談</relationshipLabel>
    <relationshipName>UpdateSourceOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>