force-app/main/default/objects/Opportunity/fields/UserEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>UserEmailAddress__c</fullName>
    <description>申込書出力用</description>
    <label>利用者メールアドレス</label>
    <type>TextArea</type>
</CustomField>