force-app/main/default/objects/Opportunity/fields/yclid__c.field-meta.xml
<CustomField>
    <fullName>yclid__c</fullName>
    <label>yclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>