force-app/main/default/objects/Opportunity/recordTypes/NewOpportunity.recordType-meta.xml
<RecordType>
    <fullName>NewOpportunity</fullName>
    <active>true</active>
    <businessProcess>事業開発</businessProcess>
    <label>新規</label>
</RecordType>