force-app/main/default/objects/Opportunity/recordTypes/PlanUpPlanDownOpportunity.recordType-meta.xml
<RecordType>
    <fullName>PlanUpPlanDownOpportunity</fullName>
    <active>true</active>
    <businessProcess>事業開発</businessProcess>
    <label>プランアップ/プランダウン</label>
</RecordType>