force-app/main/default/objects/Opportunity/recordTypes/UpdateOpportunity.recordType-meta.xml
<RecordType>
    <fullName>UpdateOpportunity</fullName>
    <active>true</active>
    <businessProcess>事業開発</businessProcess>
    <label>更新</label>
</RecordType>