force-app/main/default/objects/Opportunity/validationRules/ApplicationCreateMethod_IsBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ApplicationCreateMethod_IsBlank</fullName>
    <active>true</active>
    <errorConditionFormula>Probability = 0.8 &amp;&amp;  ISBLANK( TEXT(ApplicationWritingCreationMethod__c))</errorConditionFormula>
    <errorDisplayField>ApplicationWritingCreationMethod__c</errorDisplayField>
    <errorMessage>フェーズが「06_導入意思決定」の場合は、「申込書作成方法」を入力してください</errorMessage>
</ValidationRule>