force-app/main/default/objects/Opportunity/validationRules/cloudSign_URL_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>cloudSign_URL_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OrderApproved__c )
&amp;&amp;
NOT( ISBLANK(DocumentConfirmationUrl__c) ) &amp;&amp;
RIGHT( DocumentConfirmationUrl__c ,8) &lt;&gt; &quot;/summary&quot;
&amp;&amp;
( ISNEW() || DATEVALUE( CreatedDate ) &gt;= DATE(2024,04,10) )</errorConditionFormula>
    <errorDisplayField>DocumentConfirmationUrl__c</errorDisplayField>
    <errorMessage>末尾が「/summary」で終わるURLを入力してください</errorMessage>
</ValidationRule>