force-app/main/default/objects/Opportunity/validationRules/IrregularMatter_Other_SlackURL_IsBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>IrregularMatter_Other_SlackURL_IsBlank</fullName>
    <active>true</active>
    <description>その他イレギュラ事項を入力する場合、SlackURLに記載がないとエラー</description>
    <errorConditionFormula>if(
NOT(ISBLANK(IrregularMatterMemo__c) 
),
 AND(ISBLANK( SlackURL__c ) ,$Profile.Id &lt;&gt;&quot;00e2w000004VA9p&quot;),
 false
)</errorConditionFormula>
    <errorDisplayField>SlackURL__c</errorDisplayField>
    <errorMessage>「その他イレギュラ事項」を入力する場合は「SlackURL」を入力してください</errorMessage>
</ValidationRule>