force-app/main/default/objects/Opportunity/validationRules/NegotiationPayment_SlackURL_IsBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>NegotiationPayment_SlackURL_IsBlank</fullName>
    <active>true</active>
    <description>フェーズ「06_導入意思決定」以上の場合、支払いサイトで「翌月末払い」以外の値が選択されていたらSlackURLに記載がないとエラー</description>
    <errorConditionFormula>AND(
Probability &gt;= 0.8,
if(
ISPICKVAL(NegotiationPaymentSite__c, &quot;&quot;) ,
false,
if(
NOT(ISPICKVAL(NegotiationPaymentSite__c, &quot;翌月末払い&quot;) ),
ISBLANK( SlackURL__c ) ,
false
)
)
)</errorConditionFormula>
    <errorDisplayField>SlackURL__c</errorDisplayField>
    <errorMessage>「支払サイト」が&quot;翌月末払い&quot;以外の場合は「SlackURL」を入力してください</errorMessage>
</ValidationRule>