force-app/main/default/objects/Opportunity/validationRules/PhaseOver08_Change_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>PhaseOver08_Change_Limit</fullName>
    <active>true</active>
    <description>受注時に見積もり同期できないようにする</description>
    <errorConditionFormula>AND(
Probability =1,
ISCHANGED( SyncedQuoteId ) 
)</errorConditionFormula>
    <errorMessage>受注後は見積もり同期できません</errorMessage>
</ValidationRule>