force-app/main/default/objects/Opportunity/validationRules/PostingStartDate_Phase04_IsBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>PostingStartDate_Phase04_IsBlank</fullName>
    <active>true</active>
    <description>フェーズが&quot;提案内容合意（決裁者）&quot;以上の場合は掲載開始日（商品登録による自動反映項目）が必須。見積から商品更新された場合は無視する。</description>
    <errorConditionFormula>AND(  
$Profile.Id &lt;&gt; &quot;00e2w000004VA9p&quot; ,
ISBLANK(PRIORVALUE( SyncedQuoteId )) ,  
ISBLANK(PostingStartDate__c),  
Probability &gt;= 0.25,  
/*解約関連の項目が入力されている場合は入力規則を回避*/  
ISBLANK(TEXT(CancellationPhase__c)),  
ISBLANK(TEXT(CancellationSupportedStatus__c)),  
ISBLANK(TEXT(CancellationCauseKubun__c)),  
ISBLANK(CancellationExpectedDate__c),  
ISBLANK(CancellationDate__c),  
ISBLANK(CancellationNotificationDate__c) 
)</errorConditionFormula>
    <errorMessage>&quot;提案内容合意（決裁者）&quot;以上に進める場合は商品を登録してください</errorMessage>
</ValidationRule>