force-app/main/default/objects/Opportunity/validationRules/Reading_Phase08_less_than_A.validationRule-meta.xml
<ValidationRule>
    <fullName>Reading_Phase08_less_than_A</fullName>
    <active>true</active>
    <description>フェーズが&quot;導入意思決定&quot;以上の場合&quot;A&quot;または&quot;SF承認待ち&quot;または&quot;受注&quot;である必要がある</description>
    <errorConditionFormula>AND(  OR(ISPICKVAL(Reading__c, &quot;B：50%&quot;),ISPICKVAL(Reading__c, &quot;C：30%&quot;)) ,Probability &gt;= 0.8 )</errorConditionFormula>
    <errorDisplayField>Reading__c</errorDisplayField>
    <errorMessage>&quot;導入意思決定&quot;以上に進める場合は読みが&quot;A&quot;または&quot;SF承認待ち&quot;である必要があります</errorMessage>
</ValidationRule>