force-app/main/default/objects/Opportunity/validationRules/SpecialInformation_Phase06_IsBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>SpecialInformation_Phase06_IsBlank</fullName>
    <active>true</active>
    <description>種別がBLLかつフェーズ06以上かつ更新商談以外かつ特記事項文が空白の場合にエラー</description>
    <errorConditionFormula>ISPICKVAL(Type, &quot;BLL&quot;)   &amp;&amp;
Probability  &gt;= 0.8 &amp;&amp;
ISBLANK(SpecialInformation__c ) &amp;&amp; 
RecordType.Id  &lt;&gt; &quot;0122w000002Mx4CAAS&quot;</errorConditionFormula>
    <errorDisplayField>SpecialInformation__c</errorDisplayField>
    <errorMessage>特記事項生成ボタンから、特記事項文を生成してください</errorMessage>
</ValidationRule>