force-app/main/default/objects/Opportunity/listViews/ManualCreatingList.listView-meta.xml
<ListView>
    <fullName>ManualCreatingList</fullName>
    <columns>ApplicationApprovalPattern__c</columns>
    <columns>PostingStartDate__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>DiscountAmount__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OrderApproved__c</columns>
    <columns>ApplicationApproved__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ManualCreatingFlag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BillInfoCreationDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>受注</value>
    </filters>
    <label>手動作成が必要な商談一覧</label>
    <sharedTo>
        <group>Acounting</group>
    </sharedTo>
</ListView>